--- a/userInterface.ui
+++ b/userInterface.ui
@@ -11,21 +11,26 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Task-1</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 227, 221)
-</string>
+   <string notr="true">background-color: rgb(255, 255, 255);
+border-color: rgb(0, 170, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="2" column="2">
      <widget class="QLabel" name="label_2">
+      <property name="styleSheet">
+       <string notr="true">text-decoration: underline;
+color: rgb(0, 0, 0);
+font: 14pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
       <property name="text">
-       <string>الصوره الفوريرية</string>
+       <string>Fourier Image</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -34,8 +39,11 @@
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_3">
+      <property name="styleSheet">
+       <string notr="true">font: 57 12pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
-       <string>Input an 128*128 image</string>
+       <string>Input an 520*520 image</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -69,6 +77,9 @@
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_4">
+      <property name="styleSheet">
+       <string notr="true">font: 57 12pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string>Required sequence</string>
       </property>
@@ -82,8 +93,22 @@
         <height>16777215</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(0, 170, 255);
+color: rgb(255, 255, 255);
+font: 57 12pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
        <string>Browse</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>true</bool>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -95,24 +120,39 @@
         <height>200</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">text-decoration: underline;
+color: rgb(0, 0, 0);
+font: 14pt &quot;Ubuntu Condensed&quot;;</string>
+      </property>
       <property name="lineWidth">
        <number>1</number>
       </property>
       <property name="text">
-       <string>الصورة</string>
+       <string>Normal Image</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
-    <item row="3" column="0" colspan="3">
+    <item row="4" column="0" colspan="3">
      <widget class="QProgressBar" name="progressBar">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
       <property name="styleSheet">
-       <string notr="true">selection-background-color: rgb(46, 52, 54);</string>
+       <string notr="true">selection-background-color: rgb(0, 170, 255);
+border-color: rgb(0, 0, 0);</string>
       </property>
       <property name="value">
        <number>0</number>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+      <property name="format">
+       <string>%p%</string>
       </property>
      </widget>
     </item>
@@ -124,22 +164,17 @@
         <height>40</height>
        </size>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(0, 170, 255);
+color: rgb(255, 255, 255);
+font: 57 12pt &quot;Ubuntu&quot;;</string>
+      </property>
       <property name="text">
-       <string>Pause</string>
+       <string>Start</string>
       </property>
      </widget>
     </item>
    </layout>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>589</width>
-     <height>20</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
